--- a/angular.json
+++ b/angular.json
@@ -97,7 +97,7 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "repo": "https://JOSHLET4.github.io/AAT1_Angular/"
+            "repo": "https://github.com/JOSHLET4/AAT1_Angular.git"
           }
         }
       }
